--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.8.1
+chardet==5.2.0
 Django==5.2.3
 djangorestframework==3.16.0
 dnspython==2.7.0
 dotenv==0.9.9
+pillow==11.2.1
 pymongo==4.13.1
 python-dotenv==1.1.0
+reportlab==4.4.1
 sqlparse==0.5.3
