--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 asgiref==3.8.1
+certifi==2025.6.15
 chardet==5.2.0
+charset-normalizer==3.4.2
 Django==5.2.3
 djangorestframework==3.16.0
 dnspython==2.7.0
 dotenv==0.9.9
+idna==3.10
 pillow==11.2.1
 pymongo==4.13.1
 python-dotenv==1.1.0
 reportlab==4.4.1
+requests==2.32.4
 sqlparse==0.5.3
-
-
-
+urllib3==2.5.0
